sort.basic.lessons.sort.basic.selection.AlgSelectionSort.scala.error
AlgSelectionSort:3: error: not found: value longueur
	longueur = getNombreValeurs();
        ^AlgSelectionSort:4: error: not found: value longueur
	for(i<- 1 to longueur-1){
                     ^